# ASPIRE-Python

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  bak.gitlab-ci.yml  bb.gitlab-ci.yml  config.toml.example  ddl.sql  idp_shop_office.yaml  insert_test_data.sql
crates/db_schema/: Cargo.toml
crates/db_schema/src/: lib.rs
crates/db_schema/src/codegen/: charge_record.rs  expense_report.rs  mod.rs  operation_service.rs  orders.rs  prelude.rs  resource_setmeal.rs  setmeal_price.rs  (+2 more)
crates/idp_shop/: Cargo.toml
crates/idp_shop/src/: app_context.rs  config.rs  main.rs  route.rs
crates/idp_shop/src/api_models/: common.rs  order.rs
crates/idp_shop/src/db_models/: order.rs
crates/idp_shop/src/db_schema_codegen/: expense_report.rs  finance_account.rs  finance_bill.rs  mod.rs  orders.rs  payment_record.rs  prelude.rs  sea_orm_active_enums.rs  setemal_price.rs
crates/idp_shop/src/handler/: finance.rs  mod.rs
crates/idp_shop/src/handler/order/: create_order.rs  list_orders.rs  mod.rs
db_schema/: Cargo.toml
db_schema/src/: lib.rs
db_schema/src/data/: charge_record.rs  expense_report.rs  finance_account.rs  finance_bill.rs  mod.rs  orders.rs  payment_record.rs  prelude.rs  products.rs  resource_setmeal.rs  sea_orm_active_enums.rs  services.rs  setemal_price.rs  setmeal_price.rs
docs/: postgres.md  sea-orm-cli.md  数据库表及字段业务含义文档.md
docs/技术选型/: axum_vs_poem.md  sea_orm_vs_diesel.md  sqlx 迁移使用教程.md  sqlx_vs_diesel.md
idp_shop/: Chart.yaml  values.yaml
idp_shop/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
idp_shop/templates/tests/: test-connection.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220313_000001_create_table.rs  m20220314_000001_add_product_price.rs  m2022_init_build_db.rs
scripts/ci/: deploy.sh  wxwork_robot.sh
scripts/deploy_init/: idp_shop.service
src/: main.rs  route.rs
src/api_models/: common.rs  finance.rs  mod.rs  order.rs  product.rs  service.rs
src/apis/: finance.rs  mod.rs  order.rs  product.rs
src/handler/: finance.rs  mod.rs  order.rs  product.rs  service.rs
