[package]
name = "idp_shop"
version = "0.1.0"
edition = "2021"

[dependencies]
rbatis = { version = "3.0", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
rbson = "2.0"

tracing = "0.1"
tracing-subscriber = "0.2"
tower-http = { version = "0.2.0", features = ["trace"] }

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = "0.4"
sea-orm = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "with-chrono"
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5"

clap = { version = "3.0", features = ["derive"] }
